leptos_macro/tests/ui/view/slot_expected_one_got_more.stderr
error[E0308]: mismatched types
  --> tests/ui/view/slot_expected_one_got_more.rs:20:13
   |
20 |             <Then slot />
   |             ^^^^^^^^^^^^^
   |             |
   |             expected `Then`, found `Vec<_>`
   |             arguments to this method are incorrect
   |
   = note: expected struct `Then`
              found struct `Vec<_>`
note: method defined here
  --> tests/ui/view/slot_expected_one_got_more.rs:12:7
   |
12 | fn If(then: Then) -> impl IntoView {
   |       ^^^^------
   = note: this error originates in the macro `::std::vec` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui/view/slot_expected_one_got_more.rs:27:13
   |
27 |             <Then slot />
   |             ^^^^^^^^^^^^^
   |             |
   |             expected `Then`, found `Vec<_>`
   |             arguments to this method are incorrect
   |
   = note: expected struct `Then`
              found struct `Vec<_>`
note: method defined here
  --> tests/ui/view/slot_expected_one_got_more.rs:7:11
   |
7  | fn SlotIf(then: Then) -> impl IntoView {
   |           ^^^^------
   = note: this error originates in the macro `::std::vec` (in Nightly builds, run with -Z macro-backtrace for more info)
